--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,11 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Xinyang Yu"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+name                     : &name "Xinyang Yu"
+description              : &description "Postdoctoral Researcher at King's College London. My work bridges psychiatry, neuroscience, and omics to understand the biological underpinnings of eating disorders and mental health."
+url                      : https://xinyangyu918.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -22,23 +21,26 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  name             : "Xinyang Yu"
+  pronouns         : "she/her"  
+  bio              : "Psychiatry and neuroscience researcher using brain imaging and multi-omics to study eating disorders and adolescent mental health."
+  location         : "London, UK"
+  employer         : "King's College London"
+  uri              : https://xinyangyu918.github.io
+  email            : "xinyang.1.yu@kcl.ac.uk"
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
-  scopus           : # URL
+  arxiv            : 
+  googlescholar    : "https://scholar.google.com/citations?user=TgcVltEAAAAJ&hl=en"
+  impactstory      : 
+  orcid            : "https://orcid.org/0000-0001-8026-4839"
+  semantic         : 
+  pubmed           : 
+  researchgate     : "https://www.researchgate.net/profile/Xinyang-Yu-9"
+  scopus           : 
+  linkedlin        : "https://www.linkedin.com/in/xinyang-yu-75558b128/"
+
+  [Download my CV](files/XinyangYu_CV.pdf)
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
