--- a/_config.yml
+++ b/_config.yml
@@ -38,9 +38,8 @@ author:
   pubmed           : 
   researchgate     : "https://www.researchgate.net/profile/Xinyang-Yu-9"
   scopus           : 
-  linkedlin        : "https://www.linkedin.com/in/xinyang-yu-75558b128/"
 
-  [Download my CV](files/XinyangYu_CV.pdf)
+  [Download my CV](files/CV_Xinyang Yu.pdf)
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
