--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,6 +11,9 @@ main:
   - title: "About"
     url: /about/    
     
+  - title: "CV"
+    url: /cv/ 
+    
   - title: "Publications"
     url: /publications/
     
