--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "../images/XinyangYu.JPG"
-  name             : "Xinyang Yu"
+  name             : "Xinyang Yu (于昕洋)"
   pronouns         : "she/her"  
   bio              : "Psychiatry and neuroscience researcher using brain imaging and multi-omics to study eating disorders and adolescent mental health."
   location         : "London, UK"
